Fixed image's attribution invisible issue.

--- a/src/components/Image/styles.module.css
+++ b/src/components/Image/styles.module.css
@@ -32,10 +32,6 @@
 }
 
 .image :global(.attr) {
-  position: fixed;
-  left: 0;
-  right: 0;
-  bottom: 0;
   color: #808080;
   font-size: 8px;
   overflow: hidden;
